--- a/.github/workflows/k8s-versions-check.yml
+++ b/.github/workflows/k8s-versions-check.yml
@@ -28,6 +28,7 @@ defaults:
 env:
   # The minimal k8s version supported, k8s version smaller than this one will be removed from vendor
   MINIMAL_K8S: "1.27"
+  MINIMAL_OCP: "4.12"
 
 jobs:
 
@@ -111,8 +112,10 @@ jobs:
           curl -s https://mirror.openshift.com/pub/openshift-v4/clients/ocp/ | \
           grep -e 'href.*"4\.1[2-9]\.[0-9].*"' | \
           sed -e 's/\(.*\)href="\(4\.1[2-9]\)\(.*\)/\"\2\"/' | \
-          sort -r | uniq | tr '\r\n' ',' | \
-          sed -e 's/\(.*\)\(,\)$/\[\1\]/' | jq > .github/openshift_versions.json
+          sort -r | uniq | sed -e 's/"//g' | \
+          awk -vv=$MINIMAL_OCP '$0>=v {print $0}' | \
+          jq -Rn '[inputs]' | tee .github/openshift_versions.json
+
           OCP_VERSIONS=`cat .github/openshift_versions.json | jq -r '"v"+.[-1]+"-v"+.[0]'`
           sed -i -e 's/\(OPENSHIFT_VERSIONS ?= \)\(.*\)/\1'${OCP_VERSIONS}'/g' Makefile
         if: github.event.inputs.limit == null || github.event.inputs.limit == 'ocp'
@@ -125,6 +128,8 @@ jobs:
           body: "Update the versions used to test the operator on public cloud providers"
           branch: "k8s-cloud-versions-update"
           author: "public-cloud-k8s-versions-check <public-cloud-k8s-versions-check@users.noreply.github.com>"
-          add-paths: ".github/"
+          add-paths: |
+            .github/**
+            Makefile
           commit-message: "feat: Updated public cloud k8s tested versions"
           signoff: true
