--- a/config/crd/bases/postgresql.cnpg.io_clusters.yaml
+++ b/config/crd/bases/postgresql.cnpg.io_clusters.yaml
@@ -4108,31 +4108,42 @@ spec:
                       feature
                     properties:
                       maxStandbyNamesFromCluster:
-                        description: Max number of local cluster pods in 'synchronous_standby_names'
+                        description: |-
+                          Specifies the maximum number of local cluster pods that can be
+                          automatically included in the `synchronous_standby_names` option in
+                          PostgreSQL.
                         type: integer
                       method:
-                        description: Method can be either 'any' (quorum) or 'first'
-                          (priority)
+                        description: |-
+                          Method to select synchronous replication standbys from the listed
+                          servers, accepting 'any' (quorum-based synchronous replication) or
+                          'first' (priority-based synchronous replication) as values.
                         enum:
                         - any
                         - first
                         type: string
                       number:
-                        description: Number of sync replicas expected
+                        description: |-
+                          Specifies the number of synchronous standby servers that
+                          transactions must wait for responses from.
                         type: integer
                         x-kubernetes-validations:
-                        - message: The number of synchrononus replicas should be greater
+                        - message: The number of synchronous replicas should be greater
                             than zero
                           rule: self > 0
                       standbyNamesPost:
-                        description: User-defined list of application names to add
-                          after local ones
+                        description: |-
+                          A user-defined list of application names to be added to
+                          `synchronous_standby_names` after local cluster pods (the order is
+                          only useful for priority-based synchronous replication).
                         items:
                           type: string
                         type: array
                       standbyNamesPre:
-                        description: User-defined list of application names to add
-                          before local ones
+                        description: |-
+                          A user-defined list of application names to be added to
+                          `synchronous_standby_names` before local cluster pods (the order is
+                          only useful for priority-based synchronous replication).
                         items:
                           type: string
                         type: array
